# everscale-types

./: .gitignore  Cargo.toml  README.md  cov.sh
.github/workflows/: master.yml
abi-proc/: Cargo.toml
abi-proc/src/: common.rs  derive_from_abi.rs  derive_into_abi.rs  derive_with_abi_type.rs  lib.rs
abi-proc/src/internals/: common.rs  container.rs  context.rs  field.rs  mod.rs
benches/: big_cell.rs  boc.rs  callgrind_boc.rs  callgrind_dict.rs  callgrind_dict_from_slice.rs  callgrind_slice_uniform.rs  callgrind_usage_cell.rs  dict.rs  dict_from_slice.rs  dict_modify.rs  dict_modify_aug.rs  fat_block.rs  merkle_update.rs  mine.rs  slice_uniform.rs  usage_cell.rs
benches/data/: external_message  internal_message_with_body  masterchain_block  masterchain_block_proof  masterchain_key_block  shard_block_empty  shard_block_proof  shard_block_with_messages
fuzz/: Cargo.toml  decode_dict
fuzz/corpus/boc_rc_decode_encode/: crash-015b3a4a9aaecc126ee89e3ad0bc3b007a57cd74  crash-07f4037a78772435cf6b819b0993caa8fe65cdc6  crash-186f20f2abffa167a6c3c942b2781e01adc75b00  crash-188bb39b93580bfa91fab72fb959f20f66aae508  crash-25dab002f9e51894bd76c74c5517a089d9190fd9  crash-87a2ef36014ad3366c99ac0f53251d0bab7a5798  crash-9ddd0dbe19896dd8570710e5d79969eb9c4f9857  crash-a72775392770070679a61c64dda1591cbf4728a5  crash-ab84e1793a43a9ec49fcd30975ad06de610b5d49  crash-b3a1031ea3a602014772b4db9e1babff0f31657c  crash-c616e2bc18f6ba39096c6ba60dd58a778491205b  crash-ec8e09d7739ee41827a010199f7587869b715231
fuzz/fuzz_targets/: base64_addr.rs  boc_arc_decode.rs  boc_arc_decode_pair copy.rs  boc_arc_decode_pair.rs  boc_decode.rs  boc_decode_encode.rs  boc_decode_pair  boc_decode_pair.rs  boc_dict.rs  boc_dict_arb.rs  boc_encode.rs  boc_message.rs  boc_message_arb.rs  boc_rc_decode.rs  boc_rc_decode_encode.rs  boc_rc_decode_pair.rs  boc_rc_dict.rs  boc_rc_message.rs  cell_deserialize.rs  common.rs  dict_modify.rs  dict_modify_aug.rs  dict_modify_aug_with_cells.rs
proc/: Cargo.toml
proc/src/: bound.rs  derive_clone.rs  derive_debug.rs  derive_eq.rs  derive_load.rs  derive_store.rs  lib.rs
proc/src/internals/: ast.rs  attr.rs  ctxt.rs  mod.rs  symbol.rs
src/: arbitrary.rs  cell.rs  crc.rs  error.rs  level_mask.rs  lib.rs  prelude.rs  serde.rs  util.rs
src/abi/: contract.rs  error.rs  mod.rs  signature.rs  traits.rs  ty.rs  value.rs
src/abi/tests/: contract_v24.abi.json  depool.abi.json  mod.rs
src/abi/value/: de.rs  mod.rs  ser.rs
src/boc/: boc_reader.rs  de.rs  mod.rs  ser.rs  serde.rs
src/boc/test/: mod.rs
src/boc/tests/: mod.rs
src/cell/: arc_cell.rs  builder.rs  cell_context.rs  descriptor.rs  finalizer.rs  generic_cell.rs  lazy.rs  level_mask.rs  mod.rs  slice.rs  usage_tree.rs
src/cell/cell_impl/: mod.rs  ptr.rs  rc.rs  sync.rs
src/dict/: aug.rs  cell_context.rs  mod.rs  raw.rs  typed.rs
src/dict/ops/: build.rs  find.rs  get.rs  insert.rs  modify.rs  remove.rs  split_merge.rs
src/dict/tests/: account_blocks_aug_dict.boc
src/merkle/: ext_cell.rs  mod.rs  promise.rs  proof.rs  pruned_branch.rs  update.rs  utils.rs
src/merkle/tests/: mod.rs  simple_proof.boc
src/models/: account.rs  block.rs  config.rs  currency.rs  global_version.rs  message.rs  mod.rs  transaction.rs
src/models/account/: mod.rs
src/models/block/: block_candidate.rs  block_extra.rs  block_id.rs  block_proof.rs  mod.rs  shard_hashes.rs
src/models/block/tests/: mc_block_with_shards.boc  mc_block_with_tycho_out_msg.boc  mod.rs
src/models/config/: mod.rs  params.rs
src/models/config/tests/: mod.rs  new_config.boc  old_config.boc  simple_config.boc  test_state_2_master.boc
src/models/message/: address.rs  envelope.rs  envelope_message.rs  in_message.rs  mod.rs  out_message.rs
src/models/message/tests/: empty_internal_message.boc  external_message_body.boc  external_out_message.boc  internal_message_body.boc  internal_message_with_deploy.boc  internal_message_with_deploy_body.boc  internal_message_with_deploy_special.boc  internal_message_with_deploy_state_init.boc  mod.rs
src/models/shard/: mod.rs  shard_accounts.rs  shard_extra.rs
src/models/shard/tests/: first_block.boc  mod.rs  new_zerostate.boc
src/models/transaction/: mod.rs  phases.rs
src/models/transaction/tests/: mod.rs  ordinary_tx_bounce_no_funds.boc  ordinary_tx_bounce_no_state.boc  ordinary_tx_recursive.boc  ordinary_tx_with_external.boc  ordinary_tx_with_outgoing.boc  ordinary_tx_without_outgoing.boc  tick_tx.boc  tock_tx.boc
src/models/vm/: mod.rs  out_actions.rs
src/num/: mod.rs  varuint248.rs
