[package]
name = "everscale-types"
description = "A set of primitive types and utilities for the Everscale blockchain."
authors = ["Ivan Kalinin <i.kalinin@dexpa.io>"]
repository = "https://github.com/broxus/everscale-types"
version = "0.1.0-rc.6"
edition = "2021"
rust-version = "1.65"
include = ["src/**/*.rs", "benches/**/*.rs", "LICENSE-*", "README.md"]
license = "MIT OR Apache-2.0"

[[bench]]
name = "boc"
harness = false

[[bench]]
name = "dict"
harness = false

[workspace]
members = ["proc"]

[dependencies]
ahash = "0.8"
anyhow = { version = "1.0", optional = true }
base64 = { version = "0.21.0", optional = true }
bitflags = "2.3"
bytes = { version = "1.4", optional = true }
crc32c = "0.6"
ed25519-dalek = { version = "2.0", optional = true }
everscale-crypto = { version = "0.2", features = ["tl-proto"], optional = true }
hex = "0.4"
num-bigint = { version = "0.4", optional = true }
num-traits = { version = "0.2", optional = true }
once_cell = "1.16"
rand = { version = "0.8", optional = true }
serde = { version = "1", features = ["derive"], optional = true }
sha2 = "0.10"
smallvec = { version = "1.9", features = ["union"] }
thiserror = "1.0"
tl-proto = { version = "0.4", optional = true }

everscale-types-proc = { version = "=0.1.4", path = "proc" }

[dev-dependencies]
anyhow = "1.0"
base64 = "0.21"
criterion = "0.5"
libc = "0.2"
rand = "0.8"
rand_xorshift = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
default = ["base64", "serde", "models", "sync"]
sync = []
stats = []
serde = ["dep:serde", "base64"]
rand = ["dep:rand"]
models = ["dep:everscale-crypto", "dep:tl-proto"]
abi = [
    "dep:anyhow",
    "dep:bytes",
    "dep:ed25519-dalek",
    "dep:num-bigint",
    "dep:num-traits",
    "dep:serde",
    "models",
]
venom = []

[profile.release]
debug = true

[profile.dev.package.hex]
opt-level = 3
[profile.dev.package.base64]
opt-level = 3
[profile.dev.package.rand]
opt-level = 3
[profile.dev.package.sha2]
opt-level = 3
[profile.dev.package.everscale-crypto]
opt-level = 3
[profile.dev.package.curve25519-dalek]
opt-level = 3
[profile.dev.package.ed25519]
opt-level = 3
[profile.dev.package."*"]
opt-level = 1

[package.metadata.docs.rs]
features = ["base64", "serde", "models", "sync", "stats", "abi"]
