[package]
name = "everscale-types-abi-proc"
description = "Proc-macro abi helpers for everscale-types"
authors = ["Stanislav Eliseev <s.eliseev@dexpa.io"]
repository = "https://github.com/broxus/everscale-types"
version = "0.1.0"
edition = "2021"
include = ["src/**/*.rs", "../LICENSE-*", "../README.md"]
license = "MIT OR Apache-2.0"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0.87", features = ["visit", "full"] }