[package]
name = "tycho-types-abi-proc"
description = "Proc-macro abi helpers for tycho-types"
authors = ["Stanislav Eliseev <s.eliseev@dexpa.io"]
repository = "https://github.com/broxus/tycho-types"
version = "0.2.0"
edition = "2024"
include = ["src/**/*.rs", "../LICENSE-*", "../README.md"]
license = "MIT OR Apache-2.0"

[lib]
proc-macro = true

[dependencies]
anyhow = {version = "1.0"}
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0.87", features = ["visit", "full"] }
